# nuketown

./: .gitignore  CLAUDE.md  README.md  approval-daemon.nix  checks.nix  daemon.nix  example.nix  flake.nix  module.nix  vm-manager.sh
daemon/: pyproject.toml
daemon/nuketown_daemon/: __init__.py  __main__.py  bootstrap.py  clauding.py  config.py  daemon.py  headless.py  mail.py  session.py  socket_server.py
daemon/nuketown_daemon/xmpp/: __init__.py  approval.py  client.py  presence.py
daemon/tests/: test_bootstrap.py  test_clauding.py  test_config.py  test_headless.py  test_mail.py  test_session.py  test_socket.py  test_xmpp_approval.py  test_xmpp_client.py  test_xmpp_presence.py
docs/: cloud-design.md  cloud-spec.md  prosody-module.md  testing.md
tests/: broker-protocol.sh  client-protocol.sh  daemon-test.sh  lib.sh  run-tests.sh  simple-test.sh  sudo-approval-mock.sh
