[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuketown-daemon"
version = "0.1.0"
description = "Task daemon for nuketown agents"
requires-python = ">=3.11"

[project.scripts]
nuketown-daemon = "nuketown_daemon.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
